hphp/hack/test/typecheck/higher_kinded_types/alias_with_implicit_constraints_unsupported1.php.exp
File "alias_with_implicit_constraints_unsupported1.php", line 12, characters 20-41:
The type WithImplicitConstraint implicitly imposes constraints on its type parameters. Therefore, it cannot be used as a higher-kinded type at this time. (Naming[2047])
  File "alias_with_implicit_constraints_unsupported1.php", line 7, characters 6-27:
  The definition of WithImplicitConstraint is here.
  File "alias_with_implicit_constraints_unsupported1.php", line 7, characters 34-41:
  The definition of WithImplicitConstraint relies on TakesNum and the constraints that TakesNum imposes on its type parameter T then become implicit constraints on the type parameter T of WithImplicitConstraint.
